[tool.poetry]
name = "python-reactive-rxpy-tornado-pyqt-qt"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
PyQt5 = "^5.15.10"
tornado = "^6.4.1"
reactivex = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
